<resources>
    <!-- Global Strings -->
    <string name="app_name">GBS Bikes</string>
    <string name="text_title">GBS Bikes</string>
    <string name="image_landing_image">Landing image</string>
    <string name="text_title_sub">Welcome to GBS Bikes please find your city from the list below and press search location to find a bike</string>
    <string name="password_info">* Password must be 8 - 20 characters with at least1 uppercase and 1 special character (!@#$ etc.).</string>
    <string name="text_sign_up_btn">Sign Up</string>
    <string name="title_activity_google_maps_fragment">Map</string>
    <string name="content_desc_unsplash">Background image for recycler view</string>
    <string name="city_select_text">Please select the city that you are currently in</string>
    <string name="no_favorutes">No Favorutes!</string>
    <string name="no_favourites_text">You currently have no favourites, please add one to the list to view it here</string>

    <!-- Nav Links -->
    <string name="nav_link_wallet">Wallet</string>
    <string name="nav_link_favorites">Favorites</string>
    <string name="nav_link_buy_tickets">Buy Tickets</string>
    <string name="nav_link_journey">Plan A Journey</string>
    <string name="nav_link_search">Search Station</string>
    <string name="nav_string_logout">Logout</string>

    <!-- Hint Strings -->
    <string name="hint_full_name">Micheal Smith</string>
    <string name="hint_phone_number">(555) 1234567</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_login_password">Password</string>

    <!-- Action Button Strings -->
    <string name="action_find_bike">Search Location</string>
    <string name="action_login_btn">Login</string>
    <string name="pay_now">Pay Now</string>


    <!-- Dialogs Strings -->
    <string name="dialog_loading">Loading...</string>
    <string name="dialog_delete">You are about to delete an item Are you sure you want to delete this item"</string>
    <string name="dialog_warning">WARNING</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_delete_btn">Delete</string>
    <string name="dialog_activate_title">WARNING!!</string>
    <string name="dialog_activate">Your activated this ticket. This ticket will be deleted once the expiry date ends</string>
    <string name="dialog_ok_btn">OK</string>
    <string name="dialog_extra_info">All rides that are 30 minutes or less are free.\nAll rides that are over 30 minutes will be charged at £1.50 per 5 minutes</string>
    <string name="dialog_day_info">DAY INFORMATION</string>
    <string name="dialog_month_info">MONTH INFORMATION</string>
    <string name="dialog_year_info">YEAR INFORMATION</string>


    <!-- Card Strings -->
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="ccv">CCV</string>
    <string name="save_card_details">Save Card Details</string>
    <string name="total_amount">Total Amount</string>



    <!-- Ticket Strings-->
    <string name="ticket_sub_day">All 30 minutes rides free for 24 hours</string>
    <string name="monthly_pass_title_ticket">Monthly Pass Ticket</string>
    <string name="ticket_sub_monthly">All 30 minutes rides free for 1 month</string>
    <string name="yearly_pass_title_ticket">Yearly Pass Ticket</string>
    <string name="ticket_sub_year">All 30 minutes rides free for 1 Year</string>
    <string name="day_pass_title_ticket">Day Pass Ticket</string>
    <string name="price_year">Price £120 Euro</string>
    <string name="price_month">Price £17 Euro</string>
    <string name="price_day">Price £5 Euro</string>
    <string name="available_tickets">Your available tickets. Please click on a ticket to activate it</string>


    <!-- City Array -->
    <string-array name="city_array">
        <item>Please Select</item>
        <item>Dublin</item>
        <item>Marseille</item>
        <item>Toulouse</item>
        <item>Luxembourg</item>
        <item>Bruxelles-Capitale</item>
        <item>Lyon</item>
        <item>Brisbane</item>
    </string-array>


</resources>
