<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expiryDate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <android.support.constraint.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <android.support.constraint.Guideline
        android:id="@+id/guideRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <android.support.constraint.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />


    <TextView
        android:id="@+id/cardType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/color_black"
        app:layout_constraintBottom_toTopOf="@+id/cardName"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toTopOf="@id/guideTop"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/cardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/card_name"
        android:inputType="textPersonName"
        android:textColor="@color/color_black"
        android:textColorHint="@color/color_black"
        app:layout_constraintBottom_toTopOf="@+id/cardNumber"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toBottomOf="@+id/cardType" />

    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        android:textColor="@color/color_black"
        android:textColorHint="@color/color_black"
        app:layout_constraintBottom_toTopOf="@+id/cardExpiry"
        app:layout_constraintEnd_toEndOf="@+id/cardName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cardName"
        app:layout_constraintTop_toBottomOf="@+id/cardName" />

    <EditText
        android:id="@+id/cardExpiry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/expiry_date"
        android:inputType="date"
        android:textColor="@color/color_black"
        android:textColorHint="@color/color_black"
        app:layout_constraintBottom_toTopOf="@+id/cardCCV"
        app:layout_constraintEnd_toEndOf="@+id/cardNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cardNumber"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

    <EditText
        android:id="@+id/cardCCV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/ccv"
        android:inputType="number"
        android:textColor="@color/color_black"
        android:textColorHint="@color/color_black"
        app:layout_constraintBottom_toTopOf="@+id/saveCardSwitch"
        app:layout_constraintEnd_toEndOf="@+id/cardExpiry"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cardExpiry"
        app:layout_constraintTop_toBottomOf="@+id/cardExpiry" />




    <Switch
        android:id="@+id/saveCardSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/save_card_details"
        android:textColor="@color/color_black"
        app:layout_constraintBottom_toTopOf="@+id/amountPayable"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintTop_toBottomOf="@+id/cardCCV" />

    <RelativeLayout
        android:id="@+id/amountPayable"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/guideBottom"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft">


        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/total_amount"
            android:textColor="@color/color_black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/color_black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/payNowBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/total"
            android:layout_marginTop="8dp"
            android:background="@color/color_primary"
            android:text="@string/pay_now" />


    </RelativeLayout>




</android.support.constraint.ConstraintLayout>