<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:elevation="0dp">

    <RelativeLayout
        android:id="@+id/layout_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <include
            android:id="@+id/Toolbar"
            style="@style/ToolBar"
            layout="@layout/toolbar"/>

        <!-- Main content goes here -->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Toolbar"
            android:elevation="60dp"/>




    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/left_drawer"
        android:layout_width="255dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:background="@color/color_primary"
        android:divider="@android:color/transparent"
        android:elevation="0dp"
        android:dividerHeight="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="26dp">

                <ImageView
                    android:id="@+id/nav_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_logo"/>

                <TextView
                    android:id="@+id/text_nav_my_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginTop="-16dp"
                    android:textSize="16sp"
                    android:text="@string/nav_link_my_wallet"/>

                <TextView
                    android:id="@+id/text_nav_buy_tickets"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:text="@string/nav_link_buy_tickets"/>

                <TextView
                    android:id="@+id/text_nav_favs"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:text="@string/nav_link_favorites"/>



                <TextView
                    android:id="@+id/text_nav_journey"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:text="@string/nav_link_journey"/>

                <TextView
                    android:id="@+id/text_nav_search"
                    android:layout_width="match_parent"
                    android:layout_height="23dp"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:text="@string/nav_link_search"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/color_white"/>

            </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
