<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guide_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".04" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_centre_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="245dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:layout_constraintStart_toStartOf="@+id/guide_left"
        app:layout_constraintTop_toTopOf="@+id/guide_top" />

    <android.support.design.widget.TabLayout
        android:id="@+id/login_tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:layout_constraintStart_toStartOf="@+id/guide_left"
        app:layout_constraintTop_toBottomOf="@+id/login_logo">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Signup" />
    </android.support.design.widget.TabLayout>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:hint="@string/hint_email_address"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:layout_constraintStart_toStartOf="@+id/guide_left"
        app:layout_constraintTop_toBottomOf="@+id/login_tabs" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_locked"
        android:hint="@string/hint_login_password"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:layout_constraintStart_toStartOf="@+id/guide_left"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/action_login_btn"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/guide_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guide_left" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="please login to continue"
        app:layout_constraintBottom_toTopOf="@+id/guide_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_left" />
</android.support.constraint.ConstraintLayout>

